syntax = "proto3";

package auth;

option go_package = "github.com/Blxssy/movie/authauth-service/api/authauth;authauth";

service AuthService {
	rpc Register (RegisterRequest) returns (RegisterResponse);
	rpc Login (LoginRequest) returns (LoginResponse);
	rpc IsAdmin (IsAdminRequest) returns (IsAdminResponse);
}

message RegisterRequest {
	string username = 1;
	string email = 2;
	string password = 3;
}

message RegisterResponse {
	string access_token = 1;
	string refresh_token = 2;
}

message LoginRequest {
	string email = 1;
	string password = 2;
}

message LoginResponse {
	string access_token = 1;
	string refresh_token = 2;
}

message IsAdminRequest {
	int64 user_id = 1;
}

message IsAdminResponse {
	bool is_admin = 1;
}